# style-transfer

./: .gitignore  README.md  docker-compose.yml  download_models.sh
backend/: Dockerfile  config.py  inference.py  main.py  pyproject.toml
frontend/: Dockerfile  main.py  pyproject.toml
